--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,7 @@
   text-align: center;
 }
 
-.clima{
-  position: relative;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 100;
-}
-
-video{
+video {
   position: absolute;
   top: 0;
   left: 0;
@@ -23,7 +13,7 @@ video{
   object-fit: cover;
 }
 
-.capa{
+.capa {
   position: absolute;
   top: 0;
   left: 0;
@@ -33,6 +23,83 @@ video{
   opacity: 0.5;
   mix-blend-mode: overlay;
   z-index: 50;
+}
+
+.clima {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  color: white;
+}
+
+.content-targ {
+  padding: 0.5rem;
+  background-color: #ffffff58;
+  border: 3px solid black;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.56);
+  ;
+
+}
+
+.content-targ>h1 {
+  margin: 1rem auto;
+}
+
+
+.info-descriction {
+  padding: 0.2rem;
+}
+
+
+.info-descriction>h3 {
+  font-weight: bold;
+  text-transform: capitalize;
+  text-decoration: underline;
+  font-size: 1.7rem;
+}
+
+.info-ul {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
+.info-li {
+  border-radius: 0.5rem;
+  background-color: #213547;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.info-li>span {
+  font-weight: bold;
+
+}
+
+
+.wind {
+  background-color: rgba(0, 225, 255, 0.286);
+}
+
+.cloud {
+  background-color: rgba(0, 89, 255, 0.363);
+}
+
+.pressure {
+  background-color: rgba(220, 20, 60, 0.253);
+}
+
+
+.footer-temperature >h2 {
+  background-color: rgba(0, 0, 0, 0.158);
+  border-radius: 1rem;
 }
 
 button {
@@ -59,12 +126,14 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #ffffffdb;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
-    background-color: #f9f9f9;
+    background-color: #f9f9f9b6;
   }
 }
