--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ video {
   background-color: #213547;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
